--- a/Github-Downloader/MainWindow.axaml
+++ b/Github-Downloader/MainWindow.axaml
@@ -51,7 +51,10 @@
 
     <!-- Header -->
     <Border Background="#1E1E1E" CornerRadius="12" Padding="16">
-      <TextBlock Text="GitHub Repository Tracker" Classes="Title"/>
+      <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+          <TextBlock Text="GitHub Repository Tracker" Classes="Title"/>
+          <Button Name="BtnUpdateAll" Click="BtnUpdateAll_OnClick">Update All</Button>
+      </StackPanel>
     </Border>
 
     <!-- Content -->
@@ -67,10 +70,11 @@
         <StackPanel Spacing="10">
           <TextBlock Text="Add Repository" Classes="SubTitle"/>
 
+          <TextBox Name="TbxUrl" Watermark="Repository-Url"></TextBox>
           <TextBox Name="TbxOwner" Watermark="Owner (e.g. torvalds)"/>
           <TextBox Name="TbxRepo" Watermark="Repository name (e.g. linux)"/>
 
-          <Button Click="Button_OnClick" Content="Add Repository"/>
+          <Button Name="BtnAddRepo" Click="BtnAddRepo_OnClick" Content="Add Repository"/>
         </StackPanel>
       </Border>
 
