Changed UI and something else

--- a/Github-Downloader/MainWindow.axaml
+++ b/Github-Downloader/MainWindow.axaml
@@ -9,7 +9,6 @@
         Closing="Window_OnClosing">
     
 <Window.Styles>
-
     <Style Selector="TextBlock.Title">
       <Setter Property="FontSize" Value="22"/>
       <Setter Property="FontWeight" Value="Bold"/>
@@ -41,7 +40,6 @@
       <Setter Property="CornerRadius" Value="6"/>
       <Setter Property="Padding" Value="10"/>
     </Style>
-
   </Window.Styles>
 
   <!-- ===================== -->
@@ -86,11 +84,12 @@
               CornerRadius="12"
               Padding="16">
         <StackPanel>
-            <StackPanel Margin="0, 0, 0, 25" Orientation="Horizontal">
+            <Grid ColumnDefinitions="*,Auto,Auto">
                 <TextBlock Text="Tracked Repositories" Classes="SubTitle"/>
-                <Button Name="BtnSearchForUpdates" Click="BtnSearchForUpdates_OnClick">Search for updates</Button>
-                <Button Name="BtnUpdateAll" Click="BtnUpdateAll_OnClick">Update All</Button>
-            </StackPanel>
+                <Button Name="BtnSearchForUpdates" Grid.Column="1" Click="BtnSearchForUpdates_OnClick">Search for updates</Button>
+                <Button Name="BtnUpdateAll" Grid.Column="2" Click="BtnUpdateAll_OnClick">Update All</Button>
+            </Grid>
+            <Separator Margin="0, 5, 0, 25"></Separator>
 
             <StackPanel Name="TrackedRepos"></StackPanel>
         </StackPanel>
