--- a/Github-Downloader/MainWindow.axaml
+++ b/Github-Downloader/MainWindow.axaml
@@ -91,7 +91,8 @@
             </Grid>
             <Separator Margin="0, 5, 0, 25"></Separator>
 
-            <StackPanel Name="TrackedRepos"></StackPanel>
+            <StackPanel Name="TrackedRepos">
+            </StackPanel>
         </StackPanel>
       </Border>
 
