--- a/Github-Downloader/MainWindow.axaml
+++ b/Github-Downloader/MainWindow.axaml
@@ -91,8 +91,9 @@
             </Grid>
             <Separator Margin="0, 5, 0, 25"></Separator>
 
-            <StackPanel Name="TrackedRepos">
-            </StackPanel>
+            <Grid Name="GrdTrackedRepos" ColumnDefinitions="*,Auto,Auto,Auto,Auto,Auto">
+                
+            </Grid>
         </StackPanel>
       </Border>
 
