--- a/Github-Downloader/Views/DownloadStatus.axaml
+++ b/Github-Downloader/Views/DownloadStatus.axaml
@@ -3,9 +3,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:Github_Downloader.ViewModels"
+        xmlns:global="clr-namespace:"
         mc:Ignorable="d" d:DesignWidth="350" d:DesignHeight="150"
         x:Class="Github_Downloader.DownloadStatus"
-        x:DataType="vm:DownloadStatusViewModel"
+        x:DataType="global:DownloadStatusViewModel"
         Title="DownloadStatus"
         Width="350"
         Height="150"
