--- a/Github-Downloader/App.axaml
+++ b/Github-Downloader/App.axaml
@@ -1,5 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:views="clr-namespace:Github_Downloader.Views"
+             xmlns:vm="clr-namespace:Github_Downloader.ViewModels"
              x:Class="Github_Downloader.App"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
@@ -7,4 +9,10 @@
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
+             
+             <Application.DataTemplates>
+                 <DataTemplate DataType="{x:Type vm:HomeViewModel}">
+                     <views:HomeView />
+                 </DataTemplate>
+             </Application.DataTemplates>
 </Application>
