--- a/Github-Downloader/App.axaml
+++ b/Github-Downloader/App.axaml
@@ -5,14 +5,18 @@
              x:Class="Github_Downloader.App"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
-
+             
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
              
              <Application.DataTemplates>
                  <DataTemplate DataType="{x:Type vm:HomeViewModel}">
-                     <views:HomeView />
+                     <views:HomeView/>
+                 </DataTemplate>
+                 
+                 <DataTemplate DataType="{x:Type vm:RepoDetailsViewModel}">
+                     <views:RepoDetailsView/>
                  </DataTemplate>
              </Application.DataTemplates>
 </Application>
