--- a/Github-Downloader/Views/RepoDetailsView.axaml
+++ b/Github-Downloader/Views/RepoDetailsView.axaml
@@ -2,9 +2,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:views="clr-namespace:Github_Downloader.Views"
+             xmlns:viewModel="clr-namespace:Github_Downloader.Views"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Github_Downloader.Views.RepoDetailsView"
-             x:DataType="views:RepoDetailsView">
-    Welcome to RepoDetailsView
+             x:DataType="viewModel:RepoDetailsView">
+    
+    <StackPanel>
+        <Button Name="BtnBack" Content="Zurück" Click="BtnBack_OnClick"/>
+        <Button Name="BtnFilePicker" Content="Select download location" Click="BtnFilePicker_OnClick"/>
+    </StackPanel>
 </UserControl>
