--- a/Github-Downloader/Views/RepoDetailsView.axaml
+++ b/Github-Downloader/Views/RepoDetailsView.axaml
@@ -10,7 +10,7 @@
     
     <StackPanel Margin="25">
         <Grid ColumnDefinitions="Auto, *, Auto" Margin="0, 0, 0, 15">
-            <Button Name="BtnBack" Content="Zurück" Click="BtnBack_OnClick"/>
+            <Image Source="../resources/arrow_back.png" Width="30" Height="30" PointerPressed="BtnBack_OnClick"/>
             <TextBlock Name="TbxRepoName" Text="Repo-name" Classes="Title" Grid.Column="1" Margin="20, 0"/>
             <TextBlock Grid.Column="2" 
                 Name="TbxGithubLink" 
@@ -22,14 +22,23 @@
         </Grid>
         <Grid ColumnDefinitions="*, *">
             <StackPanel Grid.Column="0">
-                <TextBlock Name="TbxVersion" Text="Version" Margin="0, 0, 0, 15"/>
-                <Button Content="Update" Click="Button_OnClick"></Button>
-                <StackPanel >
+                <StackPanel Name="StpVersion" Margin="0, 0, 0, 15" Orientation="Horizontal">
+                    <ComboBox Name="CobVersion" Width="150" Margin="0, 0, 10, 0"/>
+                    <TextBlock Name="TbxUpdateVersion" Text="UpdateVersion" Foreground="Orange"/>
+                    <TextBlock Name="TbxVersion" Text="Version" />
+                </StackPanel>
+                <StackPanel Margin="0, 0, 0, 25" Orientation="Horizontal">
+                    <Button Name="BtnUpdate" Content="Update" Click="BtnUpdate_OnClick" Margin="0, 0, 5, 0"/>
+                    <Button Name="BtnReinstall" Content="Reinstall" Click="BtnReinstall_OnClick"/>
+                </StackPanel>
+                <StackPanel Margin="0, 0, 0, 15">
                     <TextBlock Text="Description:" Classes="SubTitle" Margin="0, 0, 0, 5"/>
                     <TextBlock Name="TbxDescription" Text="This is the description"/>
                 </StackPanel>
-                <Button Name="BtnFilePicker" Content="Select download location" Click="BtnFilePicker_OnClick"/>
-                <Label Name="LblDownloadPath" Content="föalskdjf"/>
+                <StackPanel Name="StpDownloadPath">
+                    <Button Name="BtnFilePicker" Content="Select download location" Click="BtnFilePicker_OnClick"/>
+                    <TextBlock Name="TbxDownloadPath" Text="/home/{user}"/>
+                </StackPanel>
             </StackPanel>
             
             <StackPanel Grid.Column="1">
