Added appimage support, download-indicator precicely

--- a/Github-Downloader/Views/DownloadStatus.axaml
+++ b/Github-Downloader/Views/DownloadStatus.axaml
@@ -2,10 +2,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:global="clr-namespace:"
+        xmlns:viewModels="clr-namespace:Github_Downloader.ViewModels"
         mc:Ignorable="d" d:DesignWidth="350" d:DesignHeight="150"
         x:Class="Github_Downloader.DownloadStatus"
-        x:DataType="global:DownloadStatusViewModel"
+        x:DataType="viewModels:DownloadStatusViewModel"
         Title="DownloadStatus"
         Width="350"
         Height="150"
